# agentbeats-portfolio-assessment

./: .gitignore  AGENTBEATS_REGISTRATION_GUIDE.md  AGENT_RECREATION_GUIDE.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  LEADERBOARD_FIX_SUMMARY.md  LEADERBOARD_RESTORED.md  LICENSE  NETARENA_FIX_APPLIED.md  PLATFORM_STATUS.md  README.md  START_HERE.md  SUBMISSION_CHECKLIST.md  TEMPLATE_COMPLIANCE.md  pyproject.toml  scenario.toml
.github/workflows/: publish.yml  run-assessment.yml
deployment/: Dockerfile.green  Dockerfile.purple  portfolio_constructor.py  portfolio_evaluator.py  quant_eval.py  requirements.txt
deployment/tests/: test_quant_eval.py  test_reproducibility.py
deployment/ticker_cache/: README.md
leaderboard/: README.md  form_config.json  index.json  leaderboard.sql  leaderboard_config.json
results/: README.md  Rachnog-20260111-161954.json  assessment_results.json
submissions/: README.md
